--- a/style.css
+++ b/style.css
@@ -4,15 +4,19 @@ body {
 }
 
 .gridContainer {
-    width: 960px;
-    height: 640px;
+    width: 985px;
+    height: 960px;
     display: flex;
     flex-wrap: wrap;
     flex-shrink: 0;
 }
 
 .gridBlock {
-    width: 58px;
-    height: 38px;
+    width: 60px;
+    height: 60px;
     border: solid black 1px;
+}
+
+.gridBlock:hover {
+    background-color: red;
 }
