Clean up code, add changeColor function Index.html now shows a 16 x 16 grid that can be colored in by mousing over the squares. There are two functions: drawGrid() changeColor(cell);

--- a/style.css
+++ b/style.css
@@ -15,8 +15,5 @@ body {
     width: 60px;
     height: 60px;
     border: solid black 1px;
-}
-
-.gridBlock:hover {
-    background-color: red;
+    background-color: white;
 }
