--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 
+.header {
+    text-align: center;
+}
+
 .gridContainer {
     margin: 0 auto;
     width: 960px;
@@ -12,8 +16,12 @@
 }
 
 .gridBlock {
-    
     border: solid black 1px;
     background-color: white;
     box-sizing: border-box;
+}
+
+.form {
+    padding: 20px;
+    text-align: center;
 }
